--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     function Goform() {
         var field1 = $("[name = 'name']").val();
         var field2 = $("[name = 'phone']").val();
-        var field3 = $("[name = 'e-mail']").val();
+        var field3 = $("[name = 'email']").val();
         var field3 = $("[name = 'message']").val();
 
 
