--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">聯絡我們</h2>
-            <form class="contact-form" action="your_backend_endpoint" method="post">
+            <form class="contact-form" action="javascript:Goform()" method="post">
                 <input type="text" name="name" placeholder="姓名" required>
                 <input type="number" name="phone" placeholder="電話" required>
                 <input type="email" name="email" placeholder="電子郵件">
