--- a/team.html
+++ b/team.html
@@ -29,11 +29,11 @@
                 <!-- Team Member 2 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="./img/tang.jpg" alt="Y.E.">
+                        <img src="./img/miss1.jpg" alt="Y.E.">
                     </div>
-                    <h3>唐念平</h3>
-                    <p>身為營運長，擁有深厚的品牌設計專業，並精通企劃書的執行與製作。</p>
-                    <span class="member-role">營運長</span>
+                    <h3>采希</h3>
+                    <p>一位專業的新娘秘書，擁有豐富的婚禮造型經驗和獨到的美學品味。她專注於為每位新娘量身打造獨特、精緻的妝髮造型，讓新娘在婚禮當天綻放最完美的光芒。</p>
+                    <span class="member-role">新娘秘書</span>
                 </div>
                 <!-- Team Member 3 -->
                 <div class="team-member">
