--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <hr>
             <ul>
-                <li><a href="#about">服務項目</a></li>
+                <li><a href="#about">關於我們</a></li>
                 <li><a href="#portfolio">過往案例</a></li>
                 <li><a href="#contact">聯絡我們</a></li>
             </ul>
@@ -246,65 +246,65 @@
                 </div>
             </div>
         </section>
-                
 
-    <!-- Portfolio區域 -->
-    <section id="portfolio" class="portfolio-section">
-        <div class="container">
-            <h2 class="section-title" data-aos="fade-up">過往案例</h2>
-            <div class="portfolio-carousel">
-                <div class="portfolio-item" data-aos="fade-right">
-                    <img src="./img/case1.png" alt="案例1">
+
+        <!-- Portfolio區域 -->
+        <section id="portfolio" class="portfolio-section">
+            <div class="container">
+                <h2 class="section-title" data-aos="fade-up">過往案例</h2>
+                <div class="portfolio-carousel">
+                    <div class="portfolio-item" data-aos="fade-right">
+                        <a href="./portfolio.html" target="_blank"><img src="./img/17922.png" alt="案例1"></a>
+                    </div>
+                    <!-- 更多案例 -->
                 </div>
-                <!-- 更多案例 -->
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- 聯絡我們 -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <h2 class="section-title" data-aos="fade-up">聯絡我們</h2>
-            <form class="contact-form" action="javascript:Goform()" method="post">
-                <input type="text" name="name" placeholder="姓名" required>
-                <input type="number" name="phone" placeholder="電話" required>
-                <input type="email" name="email" placeholder="電子郵件">
-                <textarea name="message" placeholder="想說的話" required></textarea>
-                <button type="submit" class="btn btn-primary">提交</button>
-            </form>
-        </div>
-    </section>
+        <!-- 聯絡我們 -->
+        <section id="contact" class="contact-section">
+            <div class="container">
+                <h2 class="section-title" data-aos="fade-up">聯絡我們</h2>
+                <form class="contact-form" action="javascript:Goform()" method="post">
+                    <input type="text" name="name" placeholder="姓名" required>
+                    <input type="number" name="phone" placeholder="電話" required>
+                    <input type="email" name="email" placeholder="電子郵件">
+                    <textarea name="message" placeholder="想說的話" required></textarea>
+                    <button type="submit" class="btn btn-primary">提交</button>
+                </form>
+            </div>
+        </section>
 
-    <!-- 頁尾 -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 兔嘲媒體整合行銷. All Rights Reserved.</p>
-            <ul class="footer-links">
-                <li><a href="#services">服務</a></li>
-                <li><a href="#portfolio">案例</a></li>
-                <li><a href="#contact">聯絡我們</a></li>
-            </ul>
-        </div>
-    </footer>
+        <!-- 頁尾 -->
+        <footer class="footer">
+            <div class="container">
+                <p>&copy; 2024 兔嘲媒體整合行銷. All Rights Reserved.</p>
+                <ul class="footer-links">
+                    <li><a href="#services">服務</a></li>
+                    <li><a href="#portfolio">案例</a></li>
+                    <li><a href="#contact">聯絡我們</a></li>
+                </ul>
+            </div>
+        </footer>
 
-    <!-- 置頂按鈕 -->
-    <!-- <a id="arrow" data-st-target="top" data-st-duration="8000" data-st-top="300" data-st-time="1000"></a> -->
+        <!-- 置頂按鈕 -->
+        <!-- <a id="arrow" data-st-target="top" data-st-duration="8000" data-st-top="300" data-st-time="1000"></a> -->
 
 
-    <!-- AOS CDN -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- slick CDN -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <!-- bootstrap CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
+        <!-- AOS CDN -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!-- slick CDN -->
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <!-- bootstrap CDN -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 
-    <script src="./main.js"></script>
+        <script src="./main.js"></script>
 </body>
 
 <script>
