--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
                     <div class="member-image">
                         <img src="./img/miss1.jpg" alt="Y.E.">
                     </div>
-                    <h3>采希</h3>
+                    <h3>林采希</h3>
                     <p>一位專業的新娘秘書，擁有豐富的婚禮造型經驗和獨到的美學品味。她專注於為每位新娘量身打造獨特、精緻的妝髮造型，讓新娘在婚禮當天綻放最完美的光芒。</p>
                     <span class="member-role">新娘秘書</span>
                 </div>
