--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>更多成員</title>
+    <title>過往案例</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header class="header">
-        <h1>我們的團隊</h1>
+        <h1>案例</h1>
     </header>
+
+    <section class="portfolio-section">
+        <div class="portfolio-carousel">
+            <div class="portfolio-item">
+                <img src="image1.png" alt="Project 1">
+                <div class="portfolio-overlay">
+                    <h3>Project 1</h3>
+                    <p>Click to view details</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="image2.png" alt="Project 2">
+                <div class="portfolio-overlay">
+                    <h3>Project 2</h3>
+                    <p>Click to view details</p>
+                </div>
+            </div>
+            <!-- Add more portfolio-item divs as needed -->
+        </div>
+    </section>
 
     <footer class="footer">
         <p>&copy; 2024 兔嘲媒體整合行銷. All Rights Reserved.</p>
