--- a/index.html
+++ b/index.html
@@ -254,9 +254,15 @@
                 <h2 class="section-title" data-aos="fade-up">過往案例</h2>
                 <div class="portfolio-carousel">
                     <div class="portfolio-item" data-aos="fade-right">
-                        <a href="./portfolio.html" target="_blank"><img src="./img/17922.png" alt="案例1"></a>
+                        <a href="./portfolio.html" target="_blank"><img src="./img/rabbit_1.png" alt="案例1"></a>
                     </div>
                     <!-- 更多案例 -->
+                    <div class="portfolio-item" data-aos="fade-right">
+                        <a href="./portfolio.html" target="_blank"><img src="./img/rabbit_13.png" alt="案例2"></a>
+                    </div>
+                    <div class="portfolio-item" data-aos="fade-right">
+                        <a href="./portfolio.html" target="_blank"><img src="./img/rabbit_8.png" alt="案例3"></a>
+                    </div>
                 </div>
             </div>
         </section>
