--- a/portfolio.html
+++ b/portfolio.html
@@ -10,26 +10,37 @@
 
 <body>
     <header class="header">
-        <h1>案例</h1>
+        <nav class="nav">
+            <div class="logo">
+                <a href="#hero"><img src="./img/LOGO06.png" alt=""></a>
+            </div>
+            <hr>
+            <ul>
+                <li><a href="#about">關於我們</a></li>
+                <li><a href="#portfolio">過往案例</a></li>
+                <li><a href="#contact">聯絡我們</a></li>
+            </ul>
+        </nav>
     </header>
+    
 
-    <section class="portfolio-section">
-        <div class="portfolio-carousel">
+    <!-- 作品集頁面 -->
+    <section class="portfolio-page">
+        <h1>BUSINESS CARD</h1>
+        <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="image1.png" alt="Project 1">
-                <div class="portfolio-overlay">
-                    <h3>Project 1</h3>
-                    <p>Click to view details</p>
-                </div>
+                <img src="./img/rabbit_1.png" alt="Business Card 1">
+                <p>兔兔救世主</p>
             </div>
             <div class="portfolio-item">
-                <img src="image2.png" alt="Project 2">
-                <div class="portfolio-overlay">
-                    <h3>Project 2</h3>
-                    <p>Click to view details</p>
-                </div>
+                <img src="./img/bridal_secretary1.jpg" alt="Business Card 2">
+                <p>采希美顏館</p>
             </div>
-            <!-- Add more portfolio-item divs as needed -->
+            <div class="portfolio-item">
+                <img src="./img/Guangda_photographic1.jpg" alt="Business Card 3">
+                <p>光達數位攝影器材</p>
+            </div>
+            <!-- Add more items as needed -->
         </div>
     </section>
 
