--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,23 @@
                 <p>光達數位攝影器材</p>
             </div>
             <!-- Add more items as needed -->
+             
+        </div>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+                <img src="./img/rabbit_1.png" alt="Business Card 1">
+                <p>兔兔救世主</p>
+            </div>
+            <div class="portfolio-item">
+                <img src="./img/bridal_secretary1.jpg" alt="Business Card 2">
+                <p>采希美顏館</p>
+            </div>
+            <div class="portfolio-item">
+                <img src="./img/Guangda_photographic1.jpg" alt="Business Card 3">
+                <p>光達數位攝影器材</p>
+            </div>
+            <!-- Add more items as needed -->
+             
         </div>
     </section>
 
