--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
             </div>
         </section>
-
+    </section>
 
         <!-- Portfolio區域 -->
         <section id="portfolio" class="portfolio-section">
