--- a/rabbit_save.html
+++ b/rabbit_save.html
@@ -85,6 +85,9 @@
             <div class="portfolio-image">
                 <img src="./img/rabbit_12.png" alt="Musée du Nuage" />
             </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_13.png" alt="Musée du Nuage" />
+            </div>
 
         </div>
     </section>
