--- a/rabbit_save.html
+++ b/rabbit_save.html
@@ -80,6 +80,9 @@
                 <img src="./img/rabbit_10.png" alt="Musée du Nuage" />
             </div>
             <div class="portfolio-image">
+                <img src="./img/rabbit_10_1.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
                 <img src="./img/rabbit_11.png" alt="Musée du Nuage" />
             </div>
             <div class="portfolio-image">
@@ -87,6 +90,33 @@
             </div>
             <div class="portfolio-image">
                 <img src="./img/rabbit_13.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_14.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_15.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_16.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_17.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_18.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_19.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_20.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_21.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
+                <img src="./img/rabbit_22.png" alt="Musée du Nuage" />
             </div>
 
         </div>
