--- a/rabbit_save.html
+++ b/rabbit_save.html
@@ -89,6 +89,9 @@
                 <img src="./img/rabbit_12.png" alt="Musée du Nuage" />
             </div>
             <div class="portfolio-image">
+                <img src="./img/rabbit_12_1.png" alt="Musée du Nuage" />
+            </div>
+            <div class="portfolio-image">
                 <img src="./img/rabbit_13.png" alt="Musée du Nuage" />
             </div>
             <div class="portfolio-image">
