--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
     <!-- 作品集頁面 -->
     <section class="portfolio-page">
-        <h1>BUSINESS CARD</h1>
+        <h1>過往案例</h1>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <a href="./rabbit_save.html"><img src="./img/rabbit_1.png" alt="Business Card 1"></a>
