--- a/team.html
+++ b/team.html
@@ -38,10 +38,10 @@
                 <!-- Team Member 3 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="./img/jun.jpg" alt="A.Y.">
+                        <img src="./img/Guangda_photographic1.jpg" alt="A.Y.">
                     </div>
-                    <h3>廖彥鈞</h3>
-                    <p>作為資訊長，在AI應用及網站和遊戲的程式優化領域擁有豐富經驗。</p>
+                    <h3>光達攝影</h3>
+                    <p>達攝影器材領域的專業顧問，擁有多年攝影器材的銷售、維修及技術支持經驗。他熟悉各大品牌的相機、鏡頭及周邊配件，能根據客戶需求提供最合適的解決方案。</p>
                     <span class="member-role">資訊長</span>
                 </div>
             </div>
