--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         </div>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img class="ant" src="./img/Ant_Empire1.png" alt="Business Card 4">
+                <a href="./ant_empire.html"><img class="ant" src="./img/Ant_Empire1.png" alt="Business Card 4"></a>
                 <p>螞蟻帝國</p>
             </div>
             <div class="portfolio-item">
