--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
         <h1>過往案例</h1>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <a href="./rabbit_save.html"><img src="./img/rabbit_1.png" alt="Business Card 1"></a>
-                <p><a href="./rabbit_save.html">兔兔救世主</a></p>
+                <a href="https://www.behance.net/gallery/160924169/17922-IP" target="_blank"><img src="./img/rabbit_1.png" alt="Business Card 1"></a>
+                <p>兔兔救世主</p>
             </div>
             <div class="portfolio-item">
-                <img src="./img/bridal_secretary1.jpg" alt="Business Card 2">
+                <a href="https://www.facebook.com/Yumi.sec" target="_blank"><img src="./img/bridal_secretary1.jpg" alt="Business Card 2"></a>
                 <p>采希美顏館</p>
             </div>
             <div class="portfolio-item">
@@ -49,7 +49,7 @@
                 <p>螞蟻帝國</p>
             </div>
             <div class="portfolio-item">
-                <img src="./img/bridal_secretary1.jpg" alt="Business Card 5">
+                <a href=""></a><img src="./img/bridal_secretary1.jpg" alt="Business Card 5">
                 <p>采希美顏館</p>
             </div>
             <div class="portfolio-item">
