--- a/portfolio.html
+++ b/portfolio.html
@@ -29,24 +29,24 @@
         <h1>過往案例</h1>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/160924169/17922-IP" target="_blank"><img src="./img/rabbit_1.png" alt="Business Card 1"></a>
-                <p>兔兔救世主</p>
+                <a href="https://www.behance.net/gallery/160924169/17922-IP" target="_blank"><img src="./img/rabbit_1.png" alt="Business Card 1">
+                <p>兔兔救世主</p></a>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.facebook.com/Yumi.sec" target="_blank"><img src="./img/bridal_secretary1.jpg" alt="Business Card 2"></a>
-                <p>采希美顏館</p>
+                <a href="https://www.facebook.com/Yumi.sec" target="_blank"><img src="./img/bridal_secretary1.jpg" alt="Business Card 2">
+                <p>采希美顏館</p></a>
             </div>
             <div class="portfolio-item">
-                <img src="./img/Guangda_photographic1.jpg" alt="Business Card 3">
-                <p>光達數位攝影器材</p>
+                <a href="https://www.facebook.com/kuangta111/?locale=zh_TW" target="_blank"><img src="./img/Guangda_photographic1.jpg" alt="Business Card 3">
+                <p>光達數位攝影器材</p></a>
             </div>
             <!-- Add more items as needed -->
              
         </div>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/132958435/IP" target="_blank"><img class="ant" src="./img/Ant_Empire1.png" alt="Business Card 4"></a>
-                <p>螞蟻帝國</p>
+                <a href="https://www.behance.net/gallery/132958435/IP" target="_blank"><img class="ant" src="./img/Ant_Empire1.png" alt="Business Card 4">
+                <p>螞蟻帝國</p></a>
             </div>
             <div class="portfolio-item">
                 <a href=""></a><img src="./img/bridal_secretary1.jpg" alt="Business Card 5">
