--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,12 @@
                 <p>螞蟻帝國</p></a>
             </div>
             <div class="portfolio-item">
-                <a href=""><img src="./img/prodigal_abalone.png" alt="Business Card 5">
+                <a href="https://www.behance.net/gallery/125020845/_" target="_blank"><img src="./img/prodigal_abalone.png" alt="Business Card 5">
                 <p>浪子包魚</p></a>
             </div>
             <div class="portfolio-item">
-                <img src="./img/Guangda_photographic1.jpg" alt="Business Card 6">
-                <p>光達數位攝影器材</p>
+                <a href="https://www.behance.net/gallery/150999335/_" target="_blank"><img src="./img/Guangda_photographic1.jpg" alt="Business Card 6">
+                <p>龍奉宮</p></a>
             </div>
             <!-- Add more items as needed -->
              
