--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 <p>浪子包魚</p></a>
             </div>
             <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/150999335/_" target="_blank"><img src="./img/Guangda_photographic1.jpg" alt="Business Card 6">
+                <a href="https://www.behance.net/gallery/150999335/_" target="_blank"><img src="./img/longfeng_palace.png" alt="Business Card 6">
                 <p>龍奉宮</p></a>
             </div>
             <!-- Add more items as needed -->
