--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
             <hr>
             <ul>
                 <li><a href="#about">關於我們</a></li>
-                <li><a href="#portfolio">過往案例</a></li>
+                <li><a href="./portfolio.html">過往案例</a></li>
                 <li><a href="#contact">聯絡我們</a></li>
             </ul>
         </nav>
